--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
     <div id = "detalles">
 
     </div>
+    <div id="paginas">
+        <input type="button" value="1" onclick="buscarPeliculaPorTitulo()">
+        <input type="button" value="2" onclick="segundaParte()">
+    </div>
 </body>
 </html>
