--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     
 
-    <div id="informacion">
+    <div id="informacion" class="informacion">
         
     </div> 
     <div id = "detalles">
